--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
 
     <!-- Main CSS File (Local) -->
     <link href="assets/css/main.css" rel="stylesheet">
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            document.querySelectorAll('.init-swiper').forEach(function (swiperEl) {
+                const configScript = swiperEl.querySelector('.swiper-config');
+                let config = JSON.parse(configScript.textContent);
+                new Swiper(swiperEl, config);
+            });
+        });
+    </script>
+
 </head>
 
 <body class="index-page">
@@ -77,9 +88,9 @@
                     <script type="application/json" class="swiper-config">
                         {
                             "loop": true,
-                            "speed": 600,
+                            "speed": 1000,
                             "autoplay": {
-                                "delay": 5000
+                                "delay": 1500
                             },
                             "slidesPerView": "auto",
                             "pagination": {
@@ -228,7 +239,6 @@
     <div id="preloader"></div>
 
     <!-- Vendor JS Files (CDN & Local) - Keep these before main.js -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> <!-- jQuery first -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
