minor deco changes

--- a/artisans.html
+++ b/artisans.html
@@ -30,6 +30,18 @@
 
     <!-- Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet">
+
+    <style>
+        .team-member .member-img img {
+            width: 100%;
+            height: 300px;
+            /* adjust height as needed */
+            object-fit: scale-down;
+            /* crop/scale while keeping aspect ratio */
+            border-radius: 10px;
+            /* optional: keep rounded corners */
+        }
+    </style>
 </head>
 
 <body class="chefs-page">
@@ -65,7 +77,7 @@
                                 </div>
                             </div>
                             <div class="member-info">
-                                <h4>Sir Bartholomew The Third</h4>
+                                <h4>Walter White</h4>
                                 <span>Master Kuih Maker & Heritage Custodian</span>
                                 <p>With over four decades of experience, He is the heart of our kuih kitchen. She
                                     carries generations of family recipes, ensuring every steam and blend captures the
@@ -87,9 +99,9 @@
                                 </div>
                             </div>
                             <div class="member-info">
-                                <h4>Madam Tan Siew Lee</h4>
+                                <h4>Mike Ehrmantraut</h4>
                                 <span>Nyonya Dessert Specialist</span>
-                                <p>Madam Siew Lee blends traditional techniques with meticulous precision. His passion
+                                <p>Mike blends traditional techniques with meticulous precision. His passion
                                     lies
                                     in perfecting the texture and vibrant natural hues of each kuih, making them as
                                     visually stunning as they are delicious.</p>
@@ -110,9 +122,9 @@
                                 </div>
                             </div>
                             <div class="member-info">
-                                <h4>Sum Ting Wong</h4>
+                                <h4>Gustavo Fring</h4>
                                 <span>Quality & Ingredient Guardian</span>
-                                <p>Ting Wong is responsible for sourcing only the freshest, highest-quality local
+                                <p>Gus is responsible for sourcing only the freshest, highest-quality local
                                     ingredients. Her dedication ensures that every coconut milk, pandan leaf, and gula
                                     melaka meets our stringent standards for authentic taste.</p>
                             </div>
