--- a/checkout.html
+++ b/checkout.html
@@ -277,17 +277,18 @@
 
                             <h4 class="mb-3">Payment Method</h4>
                             <div class="payment-methods">
-                                <div class="payment-option selected" data-payment-method="ipay88">
-                                    <input type="radio" name="paymentMethod" id="paymentIpay88" value="ipay88" checked>
-                                    <label for="paymentIpay88">
-                                        iPay88 <img src="assets/img/ipay88.png" alt="iPay88 Logo" height="20"
-                                            class="ms-2">
+                                <div class="payment-option selected" data-payment-method="touchngo">
+                                    <input type="radio" name="paymentMethod" id="paymenttouchngo" value="touchngo"
+                                        checked>
+                                    <label for="paymenttouchngo">
+                                        TouchnGo e-wallet &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img
+                                            src="assets/img/touchngo.png" alt="touchngo Logo" height="40" class="ms-2">
                                     </label>
                                 </div>
                                 <div class="payment-option" data-payment-method="fpx">
                                     <input type="radio" name="paymentMethod" id="paymentFPX" value="fpx">
                                     <label for="paymentFPX">
-                                        FPX Online Banking <img src="assets/img/fpx.png" alt="FPX Logo" height="20"
+                                        FPX Online Banking <img src="assets/img/fpx.png" alt="FPX Logo" height="40"
                                             class="ms-2">
                                     </label>
                                 </div>
@@ -299,7 +300,7 @@
                             <div class="form-check mb-3">
                                 <input type="checkbox" class="form-check-input" id="termsAndConditions" required>
                                 <label class="form-check-label" for="termsAndConditions">
-                                    I have read and agree to the website <a href="about.html#terms-of-use"
+                                    &nbsp;I have read and agree to the website <a href="about.html#terms-of-use"
                                         target="_blank" class="text-decoration-none">Terms and Conditions</a> <span
                                         class="text-danger">*</span>
                                 </label>
@@ -373,7 +374,8 @@
 
                                 <div class="form-check mb-4">
                                     <input type="checkbox" class="form-check-input" id="same-address">
-                                    <label class="form-check-label" for="same-address">Shipping address is the same as
+                                    <label class="form-check-label" for="same-address">&nbsp;&nbsp;Shipping address is
+                                        the same as
                                         my billing address</label>
                                 </div>
 
