--- a/heritage.html
+++ b/heritage.html
@@ -32,6 +32,11 @@
 
     <!-- Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet">
+    <style>
+        p {
+            text-align: justify;
+        }
+    </style>
 </head>
 
 <body class="heritage-page"> <!-- Changed body class -->
@@ -47,7 +52,8 @@
             <!-- Section Title -->
             <div class="container section-title" data-aos="fade-up">
                 <h2>Nyonya Heritage</h2> <!-- Updated Title -->
-                <p><span>Our Roots in</span> <span class="description-title">Peranakan Culture</span></p>
+                <p style="text-align: center;"><span>Our Roots in</span> <span class="description-title">Peranakan
+                        Culture</span></p>
                 <!-- Updated Subtitle -->
             </div><!-- End Section Title -->
 
