--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             and a passion for Malaysian culture.</p>
                         <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
                             <a href="menu.html" class="btn-get-started">Explore Our Kuih</a>
-                            <a href="https://www.youtube.com/watch?v=YOUR_NYONYA_KUIH_VIDEO_ID"
+                            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLbpi6ZahtOH4SVczoTshjP05vUsysmMCz&index=1"
                                 class="glightbox btn-watch-video d-flex align-items-center"><i
                                     class="bi bi-play-circle"></i><span>Watch Our Story</span></a>
                         </div>
