jquery post api to MOCKAPI

--- a/about.html
+++ b/about.html
@@ -42,21 +42,24 @@
         }
 
         .faded-image {
-            width: 600px;
+            max-width: 100%;
+            height: auto;
             border-radius: 23px;
-            /* optional if you still want rounded edges */
+            display: block;
+            margin: 0 auto;
+            /* center image */
 
-            /* Fade all around */
             -webkit-mask-image: radial-gradient(circle, rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0) 100%);
             -webkit-mask-repeat: no-repeat;
             -webkit-mask-position: center;
-            -webkit-mask-size: cover;
+            -webkit-mask-size: contain;
 
             mask-image: radial-gradient(circle, rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0) 100%);
             mask-repeat: no-repeat;
             mask-position: center;
-            mask-size: cover;
+            mask-size: contain;
         }
+
 
         .why-us-bg {
             position: absolute;
