--- a/contact.html
+++ b/contact.html
@@ -160,22 +160,6 @@
         }
 
         /* Reset margin from previous structure */
-
-        /* Styles for form messages */
-        .php-email-form .loading {
-            color: var(--default-color);
-            background: rgba(0, 0, 0, 0.05);
-        }
-
-        .php-email-form .error-message {
-            background: #ed3c0d;
-            color: #fff;
-        }
-
-        .php-email-form .sent-message {
-            background: #20995c;
-            color: #fff;
-        }
     </style>
 </head>
 
@@ -225,36 +209,36 @@
                             <!-- 5 KL locations -->
                             <div class="col">
                                 <div class="location-card">
-                                    <h4><a href="https://www.google.com/maps/place/Suria+KLCC/@3.157828,101.711105,17z/data=!3m1!4b1!4m6!3m5!1s0x31cc3624e758788f:0xed452a370e7b8f9e!8m2!3d3.1578277!4d101.7133621!16s%2Fg%2F12217c0k?entry=ttu"
-                                            target="_blank" rel="noopener">Suria KLCC Deli</a></h4>
+                                    <h4><a href="https://maps.app.goo.gl/pSJi7hNUVp1A2FeT8" target="_blank"
+                                            rel="noopener">Suria KLCC Deli</a></h4>
                                     <p>Concourse Level, Suria KLCC, Kuala Lumpur</p>
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="location-card">
-                                    <h4><a href="https://www.google.com/maps/place/Pavilion+Kuala+Lumpur/@3.148856,101.711066,17z/data=!3m1!4b1!4m6!3m5!1s0x31cc362c8935509b:0xed966c50b0a79fb4!8m2!3d3.1488558!4d101.7132547!16s%2Fg%2F12217c0k?entry=ttu"
-                                            target="_blank" rel="noopener">Pavilion Food Hall</a></h4>
+                                    <h4><a href="https://maps.app.goo.gl/Tc5KDg4Z2hKmeoTm6" target="_blank"
+                                            rel="noopener">Pavilion Food Hall</a></h4>
                                     <p>Level 1, Pavilion Kuala Lumpur, Kuala Lumpur</p>
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="location-card">
-                                    <h4><a href="https://www.google.com/maps/place/Mid+Valley+Megamall/@3.117407,101.675866,17z/data=!3m1!4b1!4m6!3m5!1s0x31cc498eb19ab83d:0x564d5053f56991fb!8m2!3d3.1174073!4d101.6780545!16s%2Fg%2F12217c0k?entry=ttu"
-                                            target="_blank" rel="noopener">Mid Valley Megamall Kiosk</a></h4>
+                                    <h4><a href="https://maps.app.goo.gl/jf1uYFrovCJm2GG4A" target="_blank"
+                                            rel="noopener">Mid Valley Megamall Kiosk</a></h4>
                                     <p>LG Floor, Mid Valley Megamall, Kuala Lumpur</p>
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="location-card">
-                                    <h4><a href="https://www.google.com/maps/place/Nu+Sentral/@3.134267,101.684177,17z/data=!3m1!4b1!4m6!3m5!1s0x31cc49c00f4d6125:0xb2c8f08ae637948c!8m2!3d3.134267!4d101.6863657!16s%2Fg%2F12217c0k?entry=ttu"
-                                            target="_blank" rel="noopener">Nu Sentral Delights</a></h4>
+                                    <h4><a href="https://maps.app.goo.gl/aPSghgC2oM3bB3jd9" target="_blank"
+                                            rel="noopener">Nu Sentral Delights</a></h4>
                                     <p>Ground Floor, Nu Sentral, Kuala Lumpur</p>
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="location-card">
-                                    <h4><a href="https://www.google.com/maps/place/The+Gardens+Mall/@3.11797,101.67499,17z/data=!3m1!4b1!4m6!3m5!1s0x31cc498eb19ab83d:0x564d5053f56991fb!8m2!3d3.11797!4d101.6771787!16s%2Fg%2F12217c0k?entry=ttu"
-                                            target="_blank" rel="noopener">The Gardens Mall Boutique</a></h4>
+                                    <h4><a href="https://maps.app.goo.gl/JT4n2g3Q6J749exd6" target="_blank"
+                                            rel="noopener">The Gardens Mall Boutique</a></h4>
                                     <p>Level 2, The Gardens Mall, Kuala Lumpur</p>
                                 </div>
                             </div>
@@ -267,22 +251,22 @@
                             <!-- 3 Penang locations -->
                             <div class="col">
                                 <div class="location-card">
-                                    <h4><a href="https://www.google.com/maps/place/Gurney+Plaza/@5.43734,100.30868,17z/data=!3m1!4b1!4m6!3m5!1s0x304ac251147a275f:0x41372337d36a99a7!8m2!3d5.43734!4d100.3108687!16s%2Fg%2F12217c0k?entry=ttu"
-                                            target="_blank" rel="noopener">Gurney Plaza Kiosk</a></h4>
+                                    <h4><a href="https://maps.app.goo.gl/DUQHEcXfZGZ3tHcf7" target="_blank"
+                                            rel="noopener">Gurney Plaza Kiosk</a></h4>
                                     <p>Ground Floor, Gurney Plaza, George Town, Penang</p>
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="location-card">
-                                    <h4><a href="https://www.google.com/maps/place/Queensbay+Mall/@5.33534,100.30607,17z/data=!3m1!4b1!4m6!3m5!1s0x304ac251147a275f:0x41372337d36a99a7!8m2!3d5.33534!4d100.3082587!16s%2Fg%2F12217c0k?entry=ttu"
-                                            target="_blank" rel="noopener">Queensbay Mall Outlet</a></h4>
+                                    <h4><a href="https://maps.app.goo.gl/V9F2tqxJ5XewYGv78" target="_blank"
+                                            rel="noopener">Queensbay Mall Outlet</a></h4>
                                     <p>Level 1, Queensbay Mall, Bayan Lepas, Penang</p>
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="location-card">
-                                    <h4><a href="https://www.google.com/maps/place/Komtar/@5.41473,100.32997,17z/data=!3m1!4b1!4m6!3m5!1s0x304ac251147a275f:0x41372337d36a99a7!8m2!3d5.41473!4d100.3321587!16s%2Fg%2F12217c0k?entry=ttu"
-                                            target="_blank" rel="noopener">Komtar Heritage Corner</a></h4>
+                                    <h4><a href="https://maps.app.goo.gl/9GB2hXcoS9y1MQkd6" target="_blank"
+                                            rel="noopener">Komtar Heritage Corner</a></h4>
                                     <p>Level 3, Komtar, George Town, Penang</p>
                                 </div>
                             </div>
@@ -295,15 +279,15 @@
                             <!-- 2 Kampar locations -->
                             <div class="col">
                                 <div class="location-card">
-                                    <h4><a href="https://www.google.com/maps/place/Kampar+Town+Mall/@4.30504,101.15007,17z/data=!3m1!4b1!4m6!3m5!1s0x31cc49c6d376326b:0x6a0a2f4c9c2214d0!8m2!3d4.30504!4d101.1522587!16s%2Fg%2F12217c0k?entry=ttu"
-                                            target="_blank" rel="noopener">Kampar Town Mall Kiosk</a></h4>
+                                    <h4><a href="https://maps.app.goo.gl/7dWP4XoAW7Y7Lzqv9" target="_blank"
+                                            rel="noopener">Kampar Town</a></h4>
                                     <p>Ground Floor, Kampar Town Mall, Kampar, Perak</p>
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="location-card">
-                                    <h4><a href="https://www.google.com/maps/place/Universiti+Tunku+Abdul+Rahman+(UTAR)+Kampar+Campus/@4.32185,101.13941,17z/data=!3m1!4b1!4m6!3m5!1s0x31cc49c6d376326b:0x6a0a2f4c9c2214d0!8m2!3d4.32185!4d101.1415987!16s%2Fg%2F12217c0k?entry=ttu"
-                                            target="_blank" rel="noopener">UTAR Main Campus Cafe</a></h4>
+                                    <h4><a href="https://maps.app.goo.gl/or8tUTW7VeVmycXD8" target="_blank"
+                                            rel="noopener">UTAR Main Campus Cafe</a></h4>
                                     <p>Student Pavilion, UTAR (Kampar Campus), Kampar, Perak</p>
                                 </div>
                             </div>
@@ -434,60 +418,7 @@
     <!-- Main JS File -->
     <script src="assets/js/main.js"></script>
 
-    <!-- <script>
-        // JavaScript for payment method selection visual effect (from checkout.html, keep if needed here)
-        // document.addEventListener('DOMContentLoaded', function () {
-        //     document.querySelectorAll('.payment-option').forEach(option => {
-        //         option.addEventListener('click', function () {
-        //             document.querySelectorAll('.payment-option').forEach(opt => opt.classList.remove('selected'));
-        //             this.classList.add('selected');
-        //             this.querySelector('input[type="radio"]').checked = true;
-        //         });
-        //     });
-        // });
 
-        // Inline script for Contact Form AJAX submission using jQuery
-        $(document).ready(function () {
-            $('#contactForm').submit(function (e) {
-                e.preventDefault(); // Prevent default form submission
-
-                const $form = $(this);
-                const $loading = $form.find('.loading');
-                const $error = $form.find('.error-message');
-                const $sent = $form.find('.sent-message');
-                const formData = $form.serializeArray(); // Serialize form data
-
-                $loading.show();
-                $error.hide();
-                $sent.hide();
-
-                // Replace 'https://formspree.io/f/YOUR_FORMSPREE_CODE' with your actual Formspree endpoint
-                // Get your endpoint from Formspree after setting up a new form.
-                // Example: https://formspree.io/f/xvovprja (this is a dummy)
-                $.ajax({
-                    url: $form.attr('action'), // Use the action attribute from the form
-                    method: 'POST',
-                    data: formData,
-                    dataType: 'json', // Formspree expects JSON response
-                    success: function (response) {
-                        $loading.hide();
-                        if (response.ok) {
-                            $sent.html('Your message has been sent. Thank you!').show();
-                            $form[0].reset(); // Clear the form
-                        } else {
-                            // Formspree returns { "ok": false, "error": "..." } on failure
-                            $error.html('Oops! There was an error sending your message: ' + (response.error || 'Unknown error')).show();
-                        }
-                    },
-                    error: function (xhr, status, error) {
-                        $loading.hide();
-                        $error.html('Failed to send message. Please try again later.').show();
-                        console.error("AJAX Error:", status, error, xhr.responseText);
-                    }
-                });
-            });
-        });
-    </script> -->
 
 </body>
 
